fix: update SAS token for blob uploads (Azure Static Webpage)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,7 @@
     <script>
         const STORAGE_ACCOUNT = 'docprocproject';
     const CONTAINER = 'uploads';
-    const SAS_TOKEN = 'se=2026-02-24T23%3A59%3A59Z&sp=acw&sv=2026-02-06&sr=c&sig=mAFbURfTmlOddtStz1nR%2BX9PRIdZjKlyRpjuOSQP9Ss%3D';
+    const SAS_TOKEN = 'se=2026-02-24T23%3A59%3A59Z&sp=racwdl&spr=https&sv=2026-02-06&sr=c&skoid=ba57582a-112f-4a59-986f-698ac8d8cebf&sktid=e52ceeca-8458-402e-ad6f-81e6fece9554&skt=2026-02-18T00%3A04%3A35Z&ske=2026-02-24T23%3A59%3A59Z&sks=b&skv=2026-02-06&sig=zdTDTIEGRVwdorG4a%2B3xvhKfcfp1JNPzodlxYYvOyDw%3D'
     
     async function uploadFile() {
         const fileInput = document.getElementById('fileInput');
